<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientesFrm"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/etId"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
        app:layout_constraintEnd_toStartOf="@+id/etPrecioVenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etPrecioVenta"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/tel_fono"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/etId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAgregar"
        app:layout_constraintTop_toTopOf="@+id/etId" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="16dp"
        android:text="@string/agregar_cliente"
        app:layout_constraintBottom_toTopOf="@+id/etNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listProductos" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:text="@string/agregar"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnModificar"
        app:layout_constraintEnd_toStartOf="@+id/btnModificar"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/listProductos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="174dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="11dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginBottom="31dp"
        android:enabled="false"
        android:text="@string/modificar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAgregar" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:text="@string/cancelar"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnModificar"
        app:layout_constraintStart_toEndOf="@+id/btnModificar" />
</android.support.constraint.ConstraintLayout>